fix: fix visual bug with footer on mobile views caused by clashing z-indices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -114,7 +114,7 @@ h4, h5 {
     border: 0;
     border-radius: 50%;
     padding: 0;
-    z-index: 100;
+    z-index: 1000;
     display: none;
     cursor: pointer;
 }
@@ -146,6 +146,7 @@ body > footer {
     width: 100%;
     background-color: var(--accent-color-dark);
     color: var(--secondary-font-color);
+    z-index: 999;
 }
 
 .social-links {
